# shield-cli

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  shield.bat
.github/workflows/: ci.yml  codeql.yml
ai/: client.py  prompt_templates.py
ai/providers/: openrouter_provider.py
cli/: __main__.py  main.py
cli/commands/: analyze.py  init_cmd.py  models.py  recon.py  report.py  scan.py  workflow.py
config/: shield.yaml
core/: agent.py  analyst_agent.py  memory.py  planner.py  reporter_agent.py  tool_agent.py  workflow.py
reports/: generator.py
reports/templates/: report.html.j2  report.md.j2
tests/: test_shield.py
tools/: amass.py  arjun.py  base_tool.py  dnsrecon.py  ffuf.py  gitleaks.py  gobuster.py  httpx_tool.py  masscan.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  sslyze.py  subfinder.py  testssl.py  wafw00f.py  whatweb.py  wpscan.py  xsstrike.py
utils/: input_validator.py  logger.py  scope_validator.py
workflows/: autonomous.yaml  full_scan.yaml  network.yaml  quick_scan.yaml  recon.yaml  web_pentest.yaml
